<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:title="@string/action_undo"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_redo"
        android:title="@string/action_redo"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_format"
        android:title="@string/action_format"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        app:showAsAction="never"/>

</menu>
